# Tethys-tasks

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  environment.yml  main.py  pyproject.toml
resources/: era5 tajikistan.kml  gfs caucasus.kml
tasks/: __init__.py  _meteofrance.py  base.py  era5.py  gfs.py  icon_ch1_eps.py  irm.py
tests/: _test_class_variables.py  test_base_task.py  test_functions.py  test_gfs.py
tests/data/ALARO/variable_files/: alaro40l_2026012900_10U.grb  alaro40l_2026012900_10V.grb  alaro40l_2026012900_2D.grb  alaro40l_2026012900_2T.grb  alaro40l_2026012900_CR.grb  alaro40l_2026012900_CS.grb  alaro40l_2026012900_IFCCC.grb  alaro40l_2026012900_IFHCC.grb  alaro40l_2026012900_IFLCC.grb  alaro40l_2026012900_IFMCC.grb  alaro40l_2026012900_IFTCC.grb  alaro40l_2026012900_LSR.grb  alaro40l_2026012900_LSS.grb  alaro40l_2026012900_MSLP.grb  alaro40l_2026012900_MaxT2.grb  alaro40l_2026012900_MerGust.grb  alaro40l_2026012900_MinT2.grb  alaro40l_2026012900_ORO.grb  alaro40l_2026012900_RH2M.grb  alaro40l_2026012900_ST.grb  alaro40l_2026012900_SurfCape.grb  alaro40l_2026012900_SurfLWrad.grb  alaro40l_2026012900_SurfSWrad.grb  alaro40l_2026012900_TotPrecip.grb  alaro40l_2026012900_ZonGust.grb  alaro40l_2026012900_fzht.grb  analyze_alaro_variables.ipynb
tethys_tasks/: __init__.py  _icon_ch1_eps.py  base.py  c3s.py  era5.py  functions.py  gfs.py  gpm.py  irm.py
tethys_tasks/resources/: belgium.kml  caucasus.kml  era5 belgium.kml  era5 iberia.kml  era5 zambezi.kml  zambezi.kml
